Upddated tests